# HelloStaticCurlWin64

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: main.c
